--- a/JuceTest/Builds/CodeBlocksLinux/JuceTest.cbp
+++ b/JuceTest/Builds/CodeBlocksLinux/JuceTest.cbp
@@ -21,7 +21,7 @@
           <Add option="-DJUCER_CODEBLOCKS_LINUX_191E0897=1"/>
           <Add option="-DJUCE_APP_VERSION=1.0.0"/>
           <Add option="-DJUCE_APP_VERSION_HEX=0x10000"/>
-          <Add option="-DJucePlugin_Build_VST=0"/>
+          <Add option="-DJucePlugin_Build_VST=1"/>
           <Add option="-DJucePlugin_Build_VST3=0"/>
           <Add option="-DJucePlugin_Build_AU=0"/>
           <Add option="-DJucePlugin_Build_AUv3=0"/>
@@ -39,6 +39,8 @@
           <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
           <Add option="-pthread"/>
           <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
           <Add directory="../../JuceLibraryCode"/>
           <Add directory="/home/hannes/DSP/JUCE/modules"/>
           <Add directory="/usr/include/freetype2"/>
@@ -50,6 +52,56 @@
           <Add library="dl"/>
           <Add library="pthread"/>
           <Add library="rt"/>
+        </Linker>
+      </Target>
+      <Target title="VST | Debug">
+        <Option output="bin/Debug/JuceTest.so"
+                prefix_auto="0"
+                extension_auto="0"/>
+        <Option object_output="obj/Debug"/>
+        <Option type="3"/>
+        <Option compiler="gcc"/>
+        <Option external_deps="bin/Debug/libJuceTest.a"/>
+        <Compiler>
+          <Add option="-DLINUX=1"/>
+          <Add option="-DDEBUG=1"/>
+          <Add option="-D_DEBUG=1"/>
+          <Add option="-DJUCER_CODEBLOCKS_LINUX_191E0897=1"/>
+          <Add option="-DJUCE_APP_VERSION=1.0.0"/>
+          <Add option="-DJUCE_APP_VERSION_HEX=0x10000"/>
+          <Add option="-DJucePlugin_Build_VST=1"/>
+          <Add option="-DJucePlugin_Build_VST3=0"/>
+          <Add option="-DJucePlugin_Build_AU=0"/>
+          <Add option="-DJucePlugin_Build_AUv3=0"/>
+          <Add option="-DJucePlugin_Build_RTAS=0"/>
+          <Add option="-DJucePlugin_Build_AAX=0"/>
+          <Add option="-DJucePlugin_Build_Standalone=0"/>
+          <Add option="-DJucePlugin_Build_Unity=0"/>
+          <Add option="-m64"/>
+          <Add option="-O0"/>
+          <Add option="-std=c++14"/>
+          <Add option="-mstackrealign"/>
+          <Add option="-g"/>
+          <Add option="-fPIC"/>
+          <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
+          <Add option="-pthread"/>
+          <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
+          <Add directory="../../JuceLibraryCode"/>
+          <Add directory="/home/hannes/DSP/JUCE/modules"/>
+          <Add directory="/usr/include/freetype2"/>
+        </Compiler>
+        <Linker>
+          <Add option="&quot;bin/Debug/libJuceTest.a&quot;"/>
+          <Add option="-m64"/>
+          <Add option="-shared"/>
+          <Add option="&#96;pkg-config --libs alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
+          <Add library="GL"/>
+          <Add library="dl"/>
+          <Add library="pthread"/>
+          <Add library="rt"/>
+          <Add directory="&quot;bin/Debug&quot;"/>
         </Linker>
       </Target>
       <Target title="Standalone Plugin | Debug">
@@ -84,6 +136,8 @@
           <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
           <Add option="-pthread"/>
           <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
           <Add directory="../../JuceLibraryCode"/>
           <Add directory="/home/hannes/DSP/JUCE/modules"/>
           <Add directory="/usr/include/freetype2"/>
@@ -112,7 +166,7 @@
           <Add option="-DJUCER_CODEBLOCKS_LINUX_191E0897=1"/>
           <Add option="-DJUCE_APP_VERSION=1.0.0"/>
           <Add option="-DJUCE_APP_VERSION_HEX=0x10000"/>
-          <Add option="-DJucePlugin_Build_VST=0"/>
+          <Add option="-DJucePlugin_Build_VST=1"/>
           <Add option="-DJucePlugin_Build_VST3=0"/>
           <Add option="-DJucePlugin_Build_AU=0"/>
           <Add option="-DJucePlugin_Build_AUv3=0"/>
@@ -129,6 +183,8 @@
           <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
           <Add option="-pthread"/>
           <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
           <Add directory="../../JuceLibraryCode"/>
           <Add directory="/home/hannes/DSP/JUCE/modules"/>
           <Add directory="/usr/include/freetype2"/>
@@ -141,6 +197,55 @@
           <Add library="dl"/>
           <Add library="pthread"/>
           <Add library="rt"/>
+        </Linker>
+      </Target>
+      <Target title="VST | Release">
+        <Option output="bin/Release/JuceTest.so"
+                prefix_auto="0"
+                extension_auto="0"/>
+        <Option object_output="obj/Release"/>
+        <Option type="3"/>
+        <Option compiler="gcc"/>
+        <Option external_deps="bin/Release/libJuceTest.a"/>
+        <Compiler>
+          <Add option="-DLINUX=1"/>
+          <Add option="-DNDEBUG=1"/>
+          <Add option="-DJUCER_CODEBLOCKS_LINUX_191E0897=1"/>
+          <Add option="-DJUCE_APP_VERSION=1.0.0"/>
+          <Add option="-DJUCE_APP_VERSION_HEX=0x10000"/>
+          <Add option="-DJucePlugin_Build_VST=1"/>
+          <Add option="-DJucePlugin_Build_VST3=0"/>
+          <Add option="-DJucePlugin_Build_AU=0"/>
+          <Add option="-DJucePlugin_Build_AUv3=0"/>
+          <Add option="-DJucePlugin_Build_RTAS=0"/>
+          <Add option="-DJucePlugin_Build_AAX=0"/>
+          <Add option="-DJucePlugin_Build_Standalone=0"/>
+          <Add option="-DJucePlugin_Build_Unity=0"/>
+          <Add option="-m64"/>
+          <Add option="-O3"/>
+          <Add option="-std=c++14"/>
+          <Add option="-mstackrealign"/>
+          <Add option="-fPIC"/>
+          <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
+          <Add option="-pthread"/>
+          <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
+          <Add directory="../../JuceLibraryCode"/>
+          <Add directory="/home/hannes/DSP/JUCE/modules"/>
+          <Add directory="/usr/include/freetype2"/>
+        </Compiler>
+        <Linker>
+          <Add option="&quot;bin/Release/libJuceTest.a&quot;"/>
+          <Add option="-m64"/>
+          <Add option="-s"/>
+          <Add option="-shared"/>
+          <Add option="&#96;pkg-config --libs alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
+          <Add library="GL"/>
+          <Add library="dl"/>
+          <Add library="pthread"/>
+          <Add library="rt"/>
+          <Add directory="&quot;bin/Release&quot;"/>
         </Linker>
       </Target>
       <Target title="Standalone Plugin | Release">
@@ -173,6 +278,8 @@
           <Add option="&#96;pkg-config --cflags alsa freetype2 x11 xext xinerama webkit2gtk-4.0 gtk+-x11-3.0 libcurl&#96;"/>
           <Add option="-pthread"/>
           <Add directory="."/>
+          <Add directory="/home/hannes/DSP/JUCE/modules/juce_audio_processors/format_types/VST3_SDK"/>
+          <Add directory="/home/hannes/DSP/SDKs/VST_SDK/VST2_SDK"/>
           <Add directory="../../JuceLibraryCode"/>
           <Add directory="/home/hannes/DSP/JUCE/modules"/>
           <Add directory="/usr/include/freetype2"/>
@@ -192,9 +299,9 @@
     </Build>
     <VirtualTargets>
       <Add alias="Debug"
-           targets="Shared Code | Debug;Standalone Plugin | Debug"/>
+           targets="Shared Code | Debug;VST | Debug;Standalone Plugin | Debug"/>
       <Add alias="Release"
-           targets="Shared Code | Release;Standalone Plugin | Release"/>
+           targets="Shared Code | Release;VST | Release;Standalone Plugin | Release"/>
     </VirtualTargets>
     <Compiler>
       <Add option="-Wall"/>
@@ -8725,6 +8832,10 @@
     <Unit filename="../../JuceLibraryCode/include_juce_audio_plugin_client_utils.cpp">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
+    </Unit>
+    <Unit filename="../../JuceLibraryCode/include_juce_audio_plugin_client_VST2.cpp">
+      <Option target="VST | Debug"/>
+      <Option target="VST | Release"/>
     </Unit>
     <Unit filename="../../JuceLibraryCode/include_juce_audio_processors.cpp">
       <Option target="Shared Code | Debug"/>
