--- a/JuceTest/Builds/CodeBlocksLinux/resources.rc
+++ b/JuceTest/Builds/CodeBlocksLinux/resources.rc
@@ -13,6 +13,8 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
+      VALUE "CompanyName",  "SRPlugins\0"
+      VALUE "LegalCopyright",  "2019 Johannes Menzel\0"
       VALUE "FileDescription",  "JuceTest\0"
       VALUE "FileVersion",  "1.0.0\0"
       VALUE "ProductName",  "JuceTest\0"
