--- a/JuceTest/Builds/CodeBlocksLinux/JuceTest.cbp
+++ b/JuceTest/Builds/CodeBlocksLinux/JuceTest.cbp
@@ -761,7 +761,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_basics/juce_audio_basics.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_basics/juce_audio_basics.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -977,7 +977,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_devices/juce_audio_devices.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_devices/juce_audio_devices.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -1919,7 +1919,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_formats/juce_audio_formats.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_formats/juce_audio_formats.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -2525,7 +2525,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_plugin_client/juce_audio_plugin_client.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_plugin_client/juce_audio_plugin_client.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -3383,7 +3383,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_processors/juce_audio_processors.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_processors/juce_audio_processors.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -3587,7 +3587,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_audio_utils/juce_audio_utils.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_audio_utils/juce_audio_utils.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -5051,7 +5051,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_core/juce_core.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_core/juce_core.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -5141,7 +5141,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_cryptography/juce_cryptography.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_cryptography/juce_cryptography.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -5261,7 +5261,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_data_structures/juce_data_structures.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_data_structures/juce_data_structures.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -5537,7 +5537,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_events/juce_events.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_events/juce_events.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -6527,7 +6527,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_graphics/juce_graphics.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_graphics/juce_graphics.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -8225,7 +8225,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_gui_basics/juce_gui_basics.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_gui_basics/juce_gui_basics.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -8597,7 +8597,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_gui_extra/juce_gui_extra.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_gui_extra/juce_gui_extra.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
@@ -8795,7 +8795,7 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
-    <Unit filename="../../../../JUCE/modules/juce_opengl/juce_opengl.h">
+    <Unit filename="../../../../../../JUCE/modules/juce_opengl/juce_opengl.h">
       <Option target="Shared Code | Debug"/>
       <Option target="Shared Code | Release"/>
       <Option compile="0"/>
